--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-sdk android:minSdkVersion="15"
+              android:targetSdkVersion="21"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
