--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shahar.eldad.webclipstoringtone" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
     <uses-sdk android:minSdkVersion="15"
               android:targetSdkVersion="21"/>
 
@@ -22,5 +20,8 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.write_external_storage"/>
 
 </manifest>
